--- a/public/locales/it/it.json
+++ b/public/locales/it/it.json
@@ -361,25 +361,25 @@
         "title": "/serviziImg/label_Title.png",
         "introTitle": "Packaging e Label: Dai Voce al Tuo Prodotto!",
         "intro": [
-          "Spesso diamo per scontati il label e il packaging design, ma in realtà, sono dei veri e propri “ambasciatori” del nostro prodotto ",
-          "Immagina di passeggiare per il supermercato e notare un prodotto con un packaging accattivante e un’etichetta che trasmette un senso di qualità e personalità",
-          "Questi dettagli non solo catturano la tua attenzione ma comunicano anche il valore intrinseco del prodotto",
-          "E sai una cosa? Possono fare la differenza tra scegliere quel prodotto o lasciarlo lì sugli scaffali",
-          "Oggi giorno, immersi in un mercato sempre più competitivo, il label e il packaging design diventano ancor più cruciali. Non solo catturano l’interesse del pubblico, ma contribuiscono a creare un’esperienza d’acquisto memorabile",
-          "Sono qui per aiutarti a scegliere il miglior contenitore per il tuo prodotto e a vestirlo con un look unico e accattivante"
+          "Spesso diamo per scontati il label e il packaging design, ma in realtà, sono dei veri e propri “ambasciatori” del nostro prodotto.",
+          "Immagina di passeggiare per il supermercato e notare un prodotto con un packaging accattivante e un’etichetta che trasmette un senso di qualità e personalità.",
+          "Questi dettagli non solo catturano la tua attenzione ma comunicano anche il valore intrinseco del prodotto.",
+          "E sai una cosa? Possono fare la differenza tra scegliere quel prodotto o lasciarlo lì sugli scaffali.",
+          "Oggi giorno, immersi in un mercato sempre più competitivo,<strong> il label e il packaging design</strong> diventano ancor più cruciali. Non solo catturano l’interesse del pubblico, ma contribuiscono a creare un’esperienza d’acquisto memorabile.",
+          "Sono qui per aiutarti a scegliere il miglior contenitore per il tuo prodotto e a vestirlo con un look unico e accattivante."
         ],
         "titlePro": "Sono qui per te:",
         "descPro": [
-          "Per analizzare insieme il tipo di pack più opportuno per il tuo prodotto e definire insieme una linea grafica"
+          "Per analizzare insieme il tipo di pack più opportuno per il tuo prodotto e definire insieme una linea grafica."
         ],
 
         "titleList": " Cosa comprende:",
         "list": [
-          "La selezione del contenitore più confacente al tuo prodotto.",
-          "L’ideazione di un’etichetta mastro sulla base delle misure del contenitore scelto (2 bozze grafiche).",
-          "Il mock-up per il controllo delle misure e della resa.",
+          "La selezione del contenitore più confacente al tuo prodotto",
+          "L’ideazione di un’etichetta mastro sulla base delle misure del contenitore scelto (2 bozze grafiche)",
+          "Il mock-up per il controllo delle misure e della resa",
           "Eventuali declinazioni grafiche (linea di prodotti)",
-          "La ricerca dei fornitori.",
+          "La ricerca dei fornitori",
           "La fornitura dell’esecutivo in formato digitale e l’avvio alla stampa"
         ],
         "descrizione": "Il label e il packaging design sono elementi essenziali che contribuiscono al successo di un prodotto e alla sua vendita. In un mercato competitivo permettono di attrarre l'interesse del pubblico e informare i consumatore.",
@@ -428,7 +428,7 @@
         ],
         "titlePro": "Sono qui per te:",
         "descPro": [
-          "Per aiutarti a definire un piano editoriale sulla base dei tuoi obiettivi aziendali"
+          "Per aiutarti a definire un piano editoriale sulla base dei tuoi obiettivi aziendali."
         ],
         "titleList": "Cosa Otterrai:",
         "list": [
@@ -505,22 +505,22 @@
         "img": "/serviziImg/campagne.png",
         "name": "Campagne Offline",
         "title": "/serviziImg/campagne_Title.png",
-        "introTitle": "Riscopri il Potere delle Campagne Offline: Emozioni, Fiducia ed Accessibilità nel Mondo Digitale",
+        "introTitle": "Riscopri il Potere delle Campagne Offline: Emozioni, Fiducia ed Accessibilità nel Mondo Non Digitale",
         "intro": [
           "Nel mondo frenetico e digitalizzato in cui viviamo, può sembrare che l’attenzione sia rivolta unicamente verso il mondo online. Ma, in un’epoca in cui i nostri occhi sono incollati agli schermi e i nostri dispositivi ci tengono connessi costantemente, c’è un mondo fuori che non dovremmo mai sottovalutare: il mondo delle campagne offline.",
           "A differenza delle Ads, sul web apportano benefici tangibili quali:  ",
-          "Generare emozioni: un poster, un volantino o un evento dal vivo possono suscitare sentimenti che difficilmente si possono ottenere attraverso uno schermo. La sensazione di tenere tra le mani un prodotto, sentirne la consistenza, fruire le informazioni con il prorio tempo ecc... possono creare un impatto profondo.",
-          "Creare fiducia: le persone tendono a fidarsi di ciò che possono vedere, toccare e sperimentare direttamente. Le campagne offline forniscono questa opportunità di esperienza autentica.",
-          "Ampliare l’accessibilità: non tutti hanno accesso costante a Internet o sono disposti a condividere i propri dati online. Le campagne offline raggiungono un pubblico più ampio, inclusi coloro che potrebbero essere altrimenti esclusi dal mondo digitale."
+          "<strong>Generare emozioni:</strong> un poster, un volantino o un evento dal vivo possono suscitare sentimenti che difficilmente si possono ottenere attraverso uno schermo. La sensazione di tenere tra le mani un prodotto, sentirne la consistenza, fruire le informazioni con il prorio tempo ecc... possono creare un impatto profondo.",
+          "<strong>Creare fiducia:</strong> le persone tendono a fidarsi di ciò che possono vedere, toccare e sperimentare direttamente. Le campagne offline forniscono questa opportunità di esperienza autentica.",
+          "<strong>Ampliare l’accessibilità:</strong> non tutti hanno accesso costante a Internet o sono disposti a condividere i propri dati online. Le campagne offline raggiungono un pubblico più ampio, inclusi coloro che potrebbero essere altrimenti esclusi dal mondo digitale."
         ],
         "titleList": "Come fare per realizzare una buona campagna offline:",
         "list": [
-          "scegliere i giusti spazi per le affissioni",
-          "prevedere delle uscite su testate giornalistiche locali in target",
-          "ideare una grafica accattivante e coinvolgente rispetto al messaggio",
-          "creare differenti formati di manifesti",
-          "creare delle cartoline o dei flyer per permettere la consegna manuale del messaggio",
-          "supportare l’iniziativa mediante gadget ideati ad hoc"
+          "Scegliere i giusti spazi per le affissioni",
+          "Prevedere delle uscite su testate giornalistiche locali in target",
+          "Ideare una grafica accattivante e coinvolgente rispetto al messaggio",
+          "Creare differenti formati di manifesti",
+          "Creare delle cartoline o dei flyer per permettere la consegna manuale del messaggio",
+          "Supportare l’iniziativa mediante gadget ideati ad hoc"
         ],
         "descrizione": "Le campagne offline plasmano scelte, creano connessioni e trasmettono messaggi profondi, incarnando idee, valori e brand che si toccano, sentono e ricordano.",
         "link": "campagne",
@@ -590,7 +590,7 @@
           "Un’ allestimento personalizzato è un potente strumento che trasforma un semplice spazio in un’ambiente comunicativo. Gli allestimenti, sia in ambito fieristico che riguardanti il punto vendita, sono la chiave per catturare l’attenzione, suscitare emozioni e far sì che il tuo brand si distingua.",
 
           "Nei contesti fieristici, un allestimento personalizzato mette in mostra il tuo brand in prima fila, attirando gli sguardi e creando un’esperienza memorabile. Nel punto vendita, trasforma la visita dei clienti in un’immersione totale nel tuo mondo.",
-          "Gli allestimenti personalizzati sono un potente strumento di comunicazione. Possono trasmettere messaggi chiari e memorabili, aiutandoti a raggiungere i tuoi obiettivi di marketing e promozione."
+          "Gli allestimenti personalizzati sono <strong>un potente strumento di comunicazione</strong>. Possono trasmettere messaggi chiari e memorabili, aiutandoti a raggiungere i tuoi obiettivi di marketing e promozione."
         ],
         "titlePro": "Sono qui per te:",
         "descPro": [
@@ -647,11 +647,6 @@
           },
           {
             "src": "/serviziImg/allestimenti/allestimenti10.jpg",
-            "width": 600,
-            "height": 600
-          },
-          {
-            "src": "/serviziImg/allestimenti/allestimenti11.jpg",
             "width": 600,
             "height": 600
           }
@@ -761,7 +756,7 @@
         "intro": [
           "Creare contenuti su misura, che siano foto, video o testi, è la formula magica per il successo sui social e non solo. Ecco perché dovresti fare della personalizzazione una priorità assoluta.",
 
-          "I contenuti personalizzati ti consentono di creare un ponte diretto tra il tuo brand e il tuo pubblico. Ogni foto e ogni parola possono essere adattate per rispecchiare i valori, la voce e la personalità unica del tuo brand, instaurando una connessione autentica con i tuoi followers.",
+          "I contenuti personalizzati ti consentono di creare un ponte diretto tra il tuo brand e il tuo pubblico. Ogni foto e ogni parola possono essere adattate per rispecchiare i valori, la voce e la personalità unica del tuo brand, instaurando <strong>una connessione autentica con i tuoi followers</strong>.",
           "La personalizzazione non si limita ai social media. Puoi estenderla ai tuoi materiali promozionali, creando un’immagine coesa e riconoscibile del tuo brand ovunque appaia. Questa coerenza rafforza la tua presenza e la tua credibilità."
         ],
         "titleList": "Quali sono i servizi offerti:",
@@ -985,7 +980,7 @@
         "button": ["Branding", "Label Design"]
       },
       {
-        "img": "/portfolioImg/chappoz/cover_chappoz_new.webp",
+        "img": "/portfolioImg/chappoz/cover_chappoz_new2.webp",
         "name": "Chappoz",
         "title": "chappoz",
         "descrizione": "Azienda Agricola",
@@ -1076,7 +1071,7 @@
           "typoImg2": "/portfolioImg/anserme/typo_anse_font.png"
         },
         "color": {
-          "titolo": "Color Brand",
+          "titolo": "Brand Colors",
           "descrizione": [
             "In collaborazione con Alessandro, abbiamo definito una gamma di colori vibranti e accesi, declinati nelle varie gradazioni, che potessero creare un piacevole contrasto con lo sfondo scuro e neutro (effetto carta riciclata) delle etichette."
           ],
@@ -1144,7 +1139,7 @@
           "typoImg2": "/portfolioImg/bequet/typo_becquet_font.png"
         },
         "color": {
-          "titolo": "Color Brand",
+          "titolo": "Brand Colors",
           "descrizione": [
             "Abbiamo deciso con Samuel di utilizzare colori neutri che richiamassero la terra, in grado di far esaltare i prodotti essiccati tradizionali della Valle d’Aosta.",
             "Per richiamare i colori della bandiera valdostana, abbiamo inserito nelle grafiche una coccinella (simbolo esso stesso di genuinità), utilizzando al posto del nero un marrone molto scuro."
@@ -1203,7 +1198,7 @@
           "typoImg2": "/portfolioImg/casadei/typo_casadei_font.png"
         },
         "color": {
-          "titolo": "Color Brand",
+          "titolo": "Brand Colors",
           "descrizione": [
             "In collaborazione con Andrea, abbiamo scelto di utilizzare una gamma di tonalità di verde come base per la nostra comunicazione, con l’obiettivo di richiamare le sfumature presenti nel suo orto a chilometro zero."
           ],
@@ -1259,7 +1254,7 @@
           "typoImg2": "/portfolioImg/phillacolor/typo_phillacolor_font.png"
         },
         "color": {
-          "titolo": "Color Brand",
+          "titolo": "Brand Colors",
           "descrizione": [
             "Abbiamo stabilito con Laura una gamma cromatica, che traesse ispirazione dal verde della clorofilla, delle piante utilizzate per creare le tinture naturali."
           ],
@@ -1274,7 +1269,7 @@
         }
       },
       "chappoz": {
-        "img": "/portfolioImg/chappoz/cover_chappoz_new.webp",
+        "img": "/portfolioImg/chappoz/cover_chappoz_new2.webp",
         "name": "Chappoz",
         "title": "chappoz",
         "descrizione": "Azienda Agricola",
@@ -1309,7 +1304,7 @@
           "typoImg2": "/portfolioImg/chappoz/typo_chap_font.png"
         },
         "color": {
-          "titolo": "Color Brand",
+          "titolo": "Brand Colors",
           "descrizione": [
             "In collaborazione con Monica, abbiamo scelto dei colori che richiamassero la terra, le coltivazioni di mais e granoturco e i piccoli frutti."
           ],
@@ -1370,7 +1365,7 @@
           "typoImg2": "/portfolioImg/daemy/typo_emy_font.png"
         },
         "color": {
-          "titolo": "Color Brand",
+          "titolo": "Brand Colors",
           "descrizione": [
             "Abbiamo deciso con Emy, di utilizzare i colori dei fiori e delle piantine da lei coltivate, nelle varie gradazioni colore, per creare un piacevole contrasto con le illustrazioni botaniche."
           ],
@@ -1427,7 +1422,7 @@
           "typoImg2": "/portfolioImg/horto/typo_horto_font.png"
         },
         "color": {
-          "titolo": "Color Brand",
+          "titolo": "Brand Colors",
           "descrizione": [
             "In collaborazione con Andrea, abbiamo optato per colori vibranti che riprendessero quelli delle materie prime utilizzate nei trasformati."
           ],
@@ -1481,7 +1476,7 @@
           "typoImg2": "/portfolioImg/isavivai/typo_isavivai_font.png"
         },
         "color": {
-          "titolo": "Color Brand",
+          "titolo": "Brand Colors",
           "descrizione": [
             "Abbiamo stabilito con Monique e Chérie, una gamma colori pastello che identificasse e distinguesse al meglio le aree interne al vivaio."
           ],
@@ -1534,7 +1529,7 @@
           "typoImg2": "/portfolioImg/saint/typo_saint_font.png"
         },
         "color": {
-          "titolo": "Color Brand",
+          "titolo": "Brand Colors",
           "descrizione": [
             "Abbiamo deciso di mantenere il verde originale del logo storico e di ideare invece dei colori nuovi a contrasto per identificare i succhi di mela e le confetture."
           ],
@@ -1592,7 +1587,7 @@
           "typoImg2": "/portfolioImg/morzenti/typo_morzenti_font.png"
         },
         "color": {
-          "titolo": "Color Brand",
+          "titolo": "Brand Colors",
           "descrizione": [
             "Sono stati selezionati dei colori che riprendono quelli della terra e dei pascoli di montagna: verdi, marroni e qualche colore a contrasto."
           ],
