--- a/public/locales/en/en.json
+++ b/public/locales/en/en.json
@@ -61,7 +61,7 @@
         "After studying at IED in Turin, I opened my creative workshop in 2008 under the name l’heartelier. For the past few years, I've been traveling between Milan and Aosta, and I decided to renew my identity, becoming <strong>Miao graphics - itinerant graphics</strong> just like me (always with a suitcase in hand). ",
         "As a professional graphic designer, I offer <strong>comprehensive creative solutions</strong> to help your business stand out and thrive. My work philosophy is based on collaboration and understanding your needs.",
         "<strong>Together, we'll craft a tailor-made creative journey for you. </strong>",
-        "<strong>Ogni brand ha una storia da raccontare</strong>, e io sono qui per trasformarla in un design unico. <strong>Il mio intento è catturare la tua idea e tradurla in un’identità visiva (logo, pack, illustrazione) memorabile. </strong>",
+        "<strong>Every brand has a story to tell</strong>, and I'm here to transform it into a unique design. <strong>My goal is to capture your idea and translate it into a memorable visual identity (logo, packaging, illustration).</strong>",
         "<strong>Contattami oggi </strong> per iniziare questo entusiasmante itinerario creativo!"
       ],
       "cta": "Scopri come"
